# ai_spikes

./: CMakeLists.txt  main.cpp
cpp/: Game.cpp  display.cpp  net.cpp  neuron.cpp
headers/: Game.h  define.h  display.h  net.h  neuron.h
